<resources>
    <string name="app_name">TugasEstafet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="home">Home</string>
    <string name="image">image</string>
    <string name="nama">nama</string>
    <string name="umur">umur</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
</resources>