<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_umur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umur"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        android:text="@string/logout"/>

</LinearLayout>